--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,4 @@
 # Manually managing azure-functions-worker may cause unexpected issues
 
 azure-functions
-spacy
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz#egg=en_core_web_sm
+nltk
